# exo-follower

./: Makefile
mod/.mod/: .Makefile.swp
mod/actuator/: CMakeLists.txt  actuator.cpp
mod/collector/: CMakeLists.txt  Makefile  collector.cpp
mod/executor/: executor.cpp
msg/: .msg.hpp  motors.h  sensor.h
sim/: model.sdf  world.sdf
sim/follower/: model.sdf
